<resources>
    <string name="app_name">HW Audio Engine and Oboe Tester</string>
    <string name="init_device">Device:</string>
    <string name="init_status">Status:</string>
    <string name="init_result">Result:</string>
    <string name="action_settings">Settings</string>
    <string name="openAudio">Open</string>
    <string name="startAudio">Start</string>
    <string name="pauseAudio">Pause</string>
    <string name="stopAudio">Stop</string>
    <string name="closeAudio">Close</string>
    <string name="recordAudio">Record</string>
    <string name="playAudio">Play</string>
    <string name="measure">Measure</string>
    <string name="cancel">Cancel</string>
    <string name="GetParam">Get Param</string>
    <string name="device_name">Device Name</string>
    <string name="auto_select">Auto select</string>
    <string name="hint_hide_settings">Hide Settings</string>
    <string name="hint_show_settings">Show Settings</string>
    <string name="loopback_instructions_glitch">
        Click Show Settings to configure.\n
        This glitch measurement plays\n
        and listens to a sine wave.\n
        It works with best with a loopback dongle.\n
        Set volume to medium-high.\n
    </string>
    <string name="echo_instructions">
        Be ready to turn down the volume\n
        if you get feedback. \n
    </string>
    <string name="loopback_instructions_latency">
        Click Show Settings to configure.\n
        This latency measurement uses a\n
        short burst of encoded noise.\n
        It works with speakers and mic\n
        or a loopback dongle.\n
        Set volume to medium-high.\n
    </string>
    <string name="api_prompt">Choose an API</string>
    <string-array name="output_modes">
        <item>Unspecified</item>
        <item>OpenSL ES</item>
        <item>AAudio</item>
    </string-array>
    <string name="audio_mode_prompt">Performance Mode</string>
    <string-array name="audio_modes">
        <item>NORMAL</item>
        <item>RINGTONE</item>
        <item>IN_CALL</item>
        <item>IN_COMMUNICATION</item>
    </string-array>
    <string name="sample_rate_prompt">SRate:</string>
    <string-array name="sample_rates">
        <item>0</item>
        <item>8000</item>
        <item>11025</item>
        <item>12000</item>
        <item>16000</item>
        <item>22050</item>
        <item>24000</item>
        <item>32000</item>
        <item>44100</item>
        <item>48000</item>
        <item>64000</item>
        <item>88200</item>
        <item>96000</item>
    </string-array>
    <string name="format_prompt">Format:</string>
    <string-array name="audio_formats">
        <item>Unspecified</item>
        <item>PCM_I16</item>
        <item>PCM_FLOAT</item>
        <item>PCM_I24</item>
        <item>PCM_I32</item>
    </string-array>
    <string name="input_preset_prompt">InPreset:</string>
    <string-array name="audio_input_presets">
        <item>Generic</item>
        <item>Camcorder</item>
        <item>VoiceRec</item>
        <item>VoiceComm</item>
        <item>Unprocessed</item>
        <item>Performance</item>
    </string-array>
    <string name="channel_count_prompt">Channels:</string>
    <string-array name="channel_counts">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="glitch_times">
        <item>10</item>
        <item>25</item>
        <item>70</item>
        <item>200</item>
        <item>600</item>
    </string-array>
    <string name="performance_prompt">Perf:</string>
    <string-array name="performance_modes">
        <item>NONE</item>
        <item>POWER_SAVING</item>
        <item>LOW_LATENCY</item>
    </string-array>
    <string name="output_signal_prompt">choose a signal</string>
    <string-array name="output_signals">
        <item>Sine</item>
        <item>Sawtooth</item>
        <item>Freq Sweep</item>
        <item>Pitch Sweep</item>
    </string-array>
    <string name="synth_sender_text">Select Sender for Synth</string>
    <string name="error_port_busy">Selected port is in use or unavailable.</string>
    <string name="port_open_ok">Port opened OK.</string>
    <string-array name="senders">
        <item>"none"</item>
    </string-array>
    <string name="title_activity_main">Test Oboe</string>
    <string name="title_activity_test_output">Test Output</string>
    <string name="title_activity_test_input">Test Input</string>
    <string name="title_activity_output_latency">Tap to Tone</string>
    <string name="title_activity_recorder">Recorder</string>
    <string name="title_activity_echo">Echo Input to Output</string>
    <string name="title_activity_rt_latency">Round Trip Latency</string>
    <string name="title_activity_glitches">Test Glitches</string>
    <string name="title_activity_auto_glitches">Auto Glitches</string>
    <string name="title_test_disconnect">Test Disconnect</string>
    <string name="title_report_devices">Report Devices</string>
    <string name="title_data_paths">Data Paths</string>
    <string name="need_record_audio_permission">"This app needs RECORD_AUDIO permission"</string>
    <string name="share">Share</string>
    <string name="seconds_per_test">seconds per test</string>
    <string name="duration">Duration:</string>
    <string name="auto_default_status">Status...</string>
    <string name="device_report">Device Report</string>
    <string name="log_of_test_results">Log of Test Results</string>
    <string name="save_file">Save</string>
    <string name="src_prompt">SRC:</string>
    <string name="average">Average</string>
    <string name="failTest">Fail</string>
    <string name="skipTest">Skip</string>
    <string name="test_disconnect_instructions">Unplug headsets, volume up, [START]</string>
    <string-array name="conversion_qualities">
        <item>None</item>
        <item>Fastest</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Best</item>
    </string-array>
    <string name="recordMode_normal">MediaRecorder record</string>
    <string name="recordMode_opensles">OpenSLES record</string>
    <string name="recordMode_audiorecord">AudioRecord record</string>
    <string name="OpenSLESRecord">Now is OpenSLES Record</string>
    <string name="OpenSLESRecording">Now is OpenSLES, need stop first</string>
    <string name="AudioRecord">Now is Audio Record</string>
    <string name="AudioRecording">Normal is AudioRecord, need stop first</string>
    <string name="MediaRecorder">Now is MediaRecorder Record</string>
    <string name="MediaRecording">Normal is MediaRecorder, need stop first</string>
    <string name="startRecord">START RECORDING</string>
    <string name="stopRecord">STOP RECORDING</string>
    <string name="playRecord">Play Recording</string>
    <string name="stopPlayRecord">Stop Playing</string>
    <string name="recordInfo">Recordings Information</string>
    <string name="getFeatures">Supported Features</string>
    <string name="isFeatureSupport">Support Karaoke?</string>
    <string name="isKaraokeSupport">Support Karaoke?</string>
    <string name="enableKaraoke">Turn On KARAOKE</string>
    <string name="getLatency">GET LATENCY</string>
    <string name="features">"Current supported features:"</string>
    <string name="support">"Support "</string>
    <string name="notSupport">"Not support "</string>
    <string name="supportKaraoke">Support karaoke</string>
    <string name="notSupportKaraoke">Not support karaoke</string>
    <string name="closeKaraoke">Turn Off KARAOKE</string>
    <string name="openSuccess">The Karaoke feature has been turned on.</string>
    <string name="openFail">The Karaoke feature could not turn on.</string>
    <string name="closeSuccess">The Karaoke feature has been turned off.</string>
    <string name="closeFail">The Karaoke feature could not turn off.</string>
    <string name="notOpenKaraoke">The Karaoke feature has been turned off, please turn it on first.</string>
    <string name="latency">Latency</string>
    <string name="latencyFail">Could not get latency. </string>
    <string name="getFail">Could not get supported features.</string>
    <string name="dialogPositive">Confirm</string>
    <string name="gotoSettings">Go to Settings to turn on permissions</string>
    <string name="resultNullContext">The context you input is empty.</string>
    <string name="appIdError">The appId check failed or network is not connected.</string>
    <string name="HMSServiceDisconnect">The appId verification service could not be connected.</string>
    <string name="notInstallAudioKitService">The audio kit service is not installed.</string>
    <string name="audioKitServiceDisconnect">The basic service of audio Kit has been disconnected.</string>
    <string name="audioKitServiceDied">The basic service of audio kit is died.</string>
    <string name="audioKitServiceNotInit">The basic service of audio kit is not initialized.</string>
    <string name="audioKitSdkVersionOld">The audio Kit SDK version is too old.</string>
    <string name="karaokeServiceDisconnect">The Karaoke service has been disconnected</string>
    <string name="karaokePermissionNot">The permission of Karaoke service has been turned off.</string>
    <string name="karaokeAppIdPermissionFail">The appId of Karaoke service permission could not be verified.</string>
    <string name="notHeadset">The headphone is not supported in the programme.</string>
    <string name="karaokeServiceDied">The Karaoke service is died.</string>
    <string name="initSuccess">Initialized successfully</string>
    <string name="karaokeServiceSucess">The basic service of audio Kit has been connected.</string>
    <string name="kitServiceSucess">The Karaoke service has been connected</string>
    <string name="init">"init AudioKit"</string>
    <string name="initKaraoke">"init Karaoke"</string>
    <string name="isInit">"Please confirm that it has been initialized"</string>
    <string name="noFeatures">Currently no supported types</string>
    <string name="notSupportFeature">This feature is not supported by current products</string>
    <string name="versionNotMatch">SDK version does not match</string>
    <string name="audiokitPermissionFail">The appId basic service permission check failed</string>
    <string name="defaultReverberation">Default reverb</string>
    <string name="ktvReverberation">KTV reverb</string>
    <string name="theaterReverberation">Theater reverb</string>
    <string name="concertReverberation">Concert reverb</string>
    <string name="setVolume">Human voice, default is 0</string>
    <string name="settingVolume">Set Voice Volume</string>
    <string name="defaultEqualizerMode">Default equalizer</string>
    <string name="fullEqualizerMode">Fully equalizer</string>
    <string name="brightEqualizerMode">Bright equalizer</string>
    <string name="success">success</string>
    <string name="record_and_play">Record and Play</string>
    <string name="recordPath">Record Path</string>
    <string name="defaultRecordPath">Default Path</string>
    <string name="recordMode">Record Mode</string>
    <string name="audiokit_interface">Audio Kit Interface</string>
    <string name="audiokit_basic_interface">1.Audio Kit Basic Service Interface</string>
    <string name="audiokit_karaoke_interface">2.Audio Kit Karaoke Service Interface</string>
    <string name="audiokit_karaoke_basic_interface">2.1 Audio Kit Karaoke Service Basic Interface</string>
    <string name="audiokit_karaoke_eq_interface">2.2 Audio Kit Karaoke Service EQ Interface</string>
    <string name="audiokit_karaoke_reverb_interface">2.3 Audio Kit Karaoke Service Reverb Interface</string>
    <string name="audiokit_karaoke_volume_interface">2.4 Audio Kit Karaoke Volume Latency Interface</string>
</resources>